--- a/terraform.yml
+++ b/terraform.yml
@@ -1,22 +1,24 @@
----
-  -hosts: localhost
-   vars:
-     state: present
-     s3_bucket: terraform-jenkins-2020
-     key: terraform.tfstate
-     region: ap-south-1
-     app_env: dev
-  -tasks:
-    -name: Run the terraform scirpts
-     - terraform:
-         project_path: "./"
-         state: "{{ state }}"
-         backend_config:
-           region: "{{ region }}"
-           bucket: "{{ s3_bucket }}"
-           key: "{{ key }}"
-           variables_file: "{{ app_env }}.tfvars"
-           workspace: "{{ app_env }}"
+-
+    hosts: localhost
+    vars:
+        state: present
+        s3_bucket: terraform-jenkins-2020
+        key: terraform.tfstate
+        region: ap-south-1
+        app_env: dev
+    tasks:
+        -
+            name: "Run the terraform scirpts"
+            terraform:  
+            project_path: "./"    
+            state: "{{ state }}"  
+            backend_config:     
+            region: "{{ region }}"    
+            bucket: "{{ s3_bucket }}"     
+            key: "{{ key }}"  
+            variables_file: "{{ app_env }}.tfvars"
+            workspace: "{{ app_env }}"
+
 
 
   
