--- a/terraform.yml
+++ b/terraform.yml
@@ -1,24 +1,21 @@
--
-    hosts: localhost
-    vars:
-        state: present
-        s3_bucket: terraform-jenkins-2020
-        key: terraform.tfstate
-        region: ap-south-1
-        app_env: dev
-    tasks:
-        -
-            name: "Run the terraform scirpts"
-            terraform:  
-            project_path: "./"    
-            state: "{{ state }}"  
-            backend_config:     
-            region: "{{ region }}"    
-            bucket: "{{ s3_bucket }}"     
-            key: "{{ key }}"  
-            variables_file: "{{ app_env }}.tfvars"
-            workspace: "{{ app_env }}"
-
-
-
-  
+--- 
+- 
+  hosts: localhost
+  tasks: 
+    - 
+      backend_config: ~
+      bucket: "{{ s3_bucket }}"
+      key: "{{ key }}"
+      name: "Run the terraform scirpts"
+      project_path: ./
+      region: "{{ region }}"
+      state: "{{ state }}"
+      terraform: ~
+      variables_file: "{{ app_env }}.tfvars"
+      workspace: "{{ app_env }}"
+  vars: 
+    app_env: dev
+    key: terraform.tfstate
+    region: ap-south-1
+    s3_bucket: terraform-jenkins-2020
+    state: present
