--- a/terraform.yml
+++ b/terraform.yml
@@ -4,7 +4,7 @@
   tasks: 
     - 
       backend_config: 
-      bucket: "{{ s3_bucket }}"
+      bucket: "{{ bucket }}"
       key: "{{ key }}"
       name: "Run the terraform scirpts"
       project_path: ./
@@ -17,5 +17,5 @@
     app_env: dev
     key: terraform.tfstate
     region: ap-south-1
-    s3_bucket: terraform-jenkins-2020
+    bucket: terraform-jenkins-2020
     state: present
